fix: grouped node titles no longer wrap (#9340)

--- a/ui/src/app/applications/components/application-resource-tree/application-resource-tree.scss
+++ b/ui/src/app/applications/components/application-resource-tree/application-resource-tree.scss
@@ -179,7 +179,6 @@
         padding-bottom: 5px;
         overflow: hidden;
         text-overflow: ellipsis;
-        white-space: nowrap;
         text-align: left;
 
     }
